--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,17 +32,18 @@ jobs:
 
       - if: github.ref == 'refs/heads/main'
         name: Conditional(Set tag as `latest`)
-        run: echo "tag=willfarrell/crontab:latest" >> $GITHUB_ENV
+        run: echo "tag=baqihuanxiong/crontab:latest" >> $GITHUB_ENV
 
       - if: startsWith(github.ref, 'refs/tags/')
         name: Conditional(Set tag as `{version}`)
-        run: echo "tag=willfarrell/crontab:${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "tag=baqihuanxiong/crontab:${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       -
         name: Build and push
         uses: docker/build-push-action@v2
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
           tags: |
