--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,8 @@ on:
       - main
     tags:
       - '*'
-#   schedule:
-#     - cron: '0 0 * * *'
+  schedule:
+      - cron: '0 0 * * *'
 
 jobs:
   multi:
@@ -32,11 +32,11 @@ jobs:
 
       - if: github.ref == 'refs/heads/main'
         name: Conditional(Set tag as `latest`)
-        run: echo "tag=baqihuanxiong/crontab:latest" >> $GITHUB_ENV
+        run: echo "tag=vladdnepr1989/crontab:latest" >> $GITHUB_ENV
 
       - if: startsWith(github.ref, 'refs/tags/')
         name: Conditional(Set tag as `{version}`)
-        run: echo "tag=baqihuanxiong/crontab:${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+        run: echo "tag=vladdnepr1989/crontab:${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
 
       -
         name: Build and push
